frontend/src/app/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

.notification-error {
  color: var(--background-color);
  background-color: rgba(255, 252, 80, 0.87);
}

.player-1 {
  color: var(--player-1);
}

.player-2 {
  color: var(--player-2);
}

.player-3 {
  color: var(--player-3);
}

.player-4 {
  color: var(--player-4);
}

.player-5 {
  color: var(--player-5);
}

.player-6 {
  color: var(--player-6);
}

.player-7 {
  color: var(--player-7);
}

.player-8 {
  color: var(--player-8);
}

.player-offline {
  display: none;
}

.chat-input-form {
  bottom: 0px;
  height: 10%;
  position: absolute;
  transform: translateY(-100%);
}

.chat-input-form > button {
  height: 100%;
}

#chat-content {
  height: 200px;
  /* Limit scope of absolute child positions (specifically, allow chat input to stay at bottom) */
  position: relative;
  text-align: left;
}

#chat-messages {
  height: 90%;
  overflow: auto;
}

/* every message should be unanchored */
#chat-messages * {
  overflow-anchor: none;
}

/* exception: invisible bottom anchor should be anchored */
#chat-bottom-anchor {
  overflow-anchor: auto;
  /* Must have *some* height */
  height: 1px;
}

#chat-widget > form > button {
  /* Don't overflow from container */
  height: 100%;
}

#userlist-widget {
  text-align: left;
}

#userlist-widget>ul {
  list-style-type: none;
}

.inactive {
  display: none;
}

